care/force-app/main/default/objects/SF_Jira_Tracker__c/SF_Jira_Tracker__c.object-meta.xml
<CustomObject>
    <description>Object to track the Jira Bug Status, (Bug Ticket in Jira) and tag the Member Cases.</description>
    <label>SF Jira Tracker</label>
    <nameField>
        <label>SF Jira Tracker Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SF Jira Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>