care/force-app/main/default/objects/SF_Jira_Tracker__c/fields/Jira_Resolution_Summary__c.field-meta.xml
<CustomField>
    <fullName>Jira_Resolution_Summary__c</fullName>
    <description>Resolution Summary from Jira Ticket when Jira Bug is Resolved/Done.</description>
    <inlineHelpText>Resolution Summary from Jira Ticket when Jira Bug is Resolved/Done Manually Enter by Tabbatha and Team.</inlineHelpText>
    <label>Jira Resolution Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>