care/force-app/main/default/objects/SF_Jira_Tracker__c/fields/Jira_Status__c.field-meta.xml
<CustomField>
    <fullName>Jira_Status__c</fullName>
    <description>Jira Ticket Status Tracker</description>
    <inlineHelpText>Jira Status - Issue Type Bug</inlineHelpText>
    <label>Jira Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Ready to Deploy</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>