care/force-app/main/default/objects/SF_Jira_Tracker__c/fields/Jira_Subject__c.field-meta.xml
<CustomField>
    <fullName>Jira_Subject__c</fullName>
    <description>Subject line from Jira</description>
    <inlineHelpText>Please Copy Subject Line from Jira.</inlineHelpText>
    <label>Jira Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>