care/force-app/main/default/objects/SF_Jira_Tracker__c/fields/Jira_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket_Number__c</fullName>
    <description>Enter the Jira Ticket Number</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the Jira Ticket Number</inlineHelpText>
    <label>Jira Ticket Number</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>