care/force-app/main/default/objects/SF_Jira_Tracker__c/validationRules/Resolution_Summary_for_Done_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_Summary_for_Done_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  ISPICKVAL( Jira_Status__c , &quot;Done&quot;),
  ISBLANK(Jira_Resolution_Summary__c)
)</errorConditionFormula>
    <errorMessage>Please Add Jira Resolution Summary</errorMessage>
</ValidationRule>