care/force-app/main/default/objects/SF_Jira_Tracker__c/listViews/All_Open.listView-meta.xml
<ListView>
    <fullName>All_Open</fullName>
    <columns>NAME</columns>
    <columns>Jira_Ticket_Number__c</columns>
    <columns>Jira_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Jira_Status__c</field>
        <operation>equals</operation>
        <value>Open,Development,Ready to Deploy</value>
    </filters>
    <label>All Open Jira Tickets</label>
</ListView>